Changes for 2.2.10rc1

New features:

Bug fixes:
....I....T [ZBX-9331] changed value type of system.stat[kthr,*] items in "Template OS AIX" to float and added them to "Performance" application (asaveljevs)
........S. [ZBX-9368] fixed possible SQL errors when linking of several templates (Sasha)

--------------------------------------------------------------------------------
Changes for 2.2.9

2.2.9rc1 was released as 2.2.9 without any changes

--------------------------------------------------------------------------------
Changes for 2.2.9rc1

New features:
.......PS. [ZBXNEXT-2354] separated VMware performance collector based statistic retrieval from VMware data retrieval and added items to monitor custom performance counters (wiper)
A.F....... [ZBX-1357] updated Polish and Slovak translations; thanks to Zabbix translators (Richlv)

Bug fixes:
.......PS. [ZBX-9344] fixed infinite looping in telnet.run[] in case there is no password prompt (asaveljevs, dimir)
..F....... [ZBX-9281] fixed undefined offset in template screens when resource is URL (Ivo)
..F....... [ZBX-4633] fixed host inventories not displaying all filtered results when record count exceeds global limit (Ivo)
...G...... [ZBX-9283] improved proc_info item (Windows only) to get more information about the processes (dimir)
...G...PS. [ZBX-9284] added zabbix log file locking to avoid incomplete logging on log file rotation (igors)
...G...... [ZBX-9143] improved proc.num under Windows to handle more processes (dimir)
...G...... [ZBX-9232] fixed processing of eventlog messages to avoid incomplete messaging for events which description could not be found (igors)
........S. [ZBX-9285] fixed memory leak when processing host prototypes (Sasha)
.......PS. [ZBX-9279] optimized VMware requests to reduce amount of transferred data (wiper)